sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: value faire
 faire 
 ^AlgCombSort:6: error: not found: value i
while( i+ecart < x){
       ^AlgCombSort:9: error: not found: value i
   		i = 0
                ^AlgCombSort:11: error: not found: value y
     while( ecart>1 || y!=0){
                       ^AlgCombSort:12: error: not found: value i
     	if (getValeur(i)>getValeur(i+1)){
                      ^AlgCombSort:13: error: not found: value i
			echange(i,i+1)
                                ^AlgCombSort:15: error: not found: value i
    		i=i+1
                ^